--- a/produccionWeb/.env.example
+++ b/produccionWeb/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=BookZone
+APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:4BvIZpvToNKXhJ4WfR/AhNi5OVrbhEXaqjI/0FiZYkw=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=libreriabookzone
+DB_DATABASE=book_zone
 DB_USERNAME=root
 DB_PASSWORD=
 
