--- a/produccionWeb/composer.json
+++ b/produccionWeb/composer.json
@@ -10,12 +10,12 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "laravel/ui": "*",
+        "laravel/ui": "^4.2",
         "laravelcollective/html": "^6.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
-        "ibex/crud-generator": "*",
+        "ibex/crud-generator": "^1.4",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
